syntax = "proto3";

package user;

import "user_enum.proto";
import "user_schema.proto";

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/way11229/tinder_matching";

message CreateUserAndListMatchesRequest {
  string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "user name",
    required: ["name"],
  }];
  uint32 height = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "user height",
    required: ["height"],
  }];
  UserGender gender = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "user gender",
    required: ["gender"],
  }];
  uint32 number_of_wanted_dates = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "nubmer of wanted dates",
    required: ["number_of_wanted_dates"],
  }];
}

message CreateUserAndListMatchesResponse {
  string user_id = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "new user id",
  }];
  repeated User matches = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "matches of the new user",
  }];
}